Fixed table layout issues

--- a/src/styles/components/_stocksTable.scss
+++ b/src/styles/components/_stocksTable.scss
@@ -43,7 +43,7 @@ table a, p, li {
 
 // cells basic
 table td, table th{
-    padding: $sz-m $sz-l;
+    padding: $sz-s;
     transition: background-color 200ms linear;
 }
 // Rows
